--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <br><br><br><br>
     <canvas id="pong" width="1600" height="1200"></canvas>
+    <script src="constants.js"></script>
     <script src="script.js"></script>
 
 
